--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@adonisjs/eslint-config": "^1.2.1",
     "@adonisjs/prettier-config": "^1.2.1",
     "@adonisjs/tsconfig": "^1.2.1",
-    "@japa/assert": "^2.1.0",
+    "@japa/assert": "^1.2.4",
     "@japa/plugin-adonisjs": "^3.0.0",
     "@japa/runner": "^3.1.1",
     "@swc/core": "^1.3.107",
@@ -59,6 +59,7 @@
     "@adonisjs/vite": "^2.0.2",
     "@vinejs/vine": "^1.7.1",
     "edge.js": "^6.0.1",
+    "got": "^14.2.0",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1"
