--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^2.0.2",
     "@vinejs/vine": "^1.7.1",
+    "adonisjs-scheduler": "^1.0.0",
     "edge.js": "^6.0.1",
     "got": "^14.2.0",
     "luxon": "^3.4.4",
