--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "@swc/core": "^1.3.107",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.10",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "pino-pretty": "^10.3.1",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.4",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
