Add connection model and connection creation based on airstack data

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ DB_USER=postgres
 DB_PASSWORD=db_password
 DB_DATABASE=db_database
 MERKLE_ROOT_SECRET=merkle_root_secret
+AIRSTACK_API_KEY=airstack_api_key
