--- a/package.json
+++ b/package.json
@@ -61,10 +61,17 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^2.0.2",
     "@airstack/node": "^0.0.5",
+    "@biconomy/account": "^4.0.0",
+    "@biconomy/bundler": "^4.0.0",
+    "@biconomy/common": "^4.0.0",
+    "@biconomy/core-types": "^3.1.3",
+    "@biconomy/modules": "^4.0.0",
+    "@biconomy/paymaster": "^4.0.0",
     "@coinbase/onchainkit": "^0.6.1",
     "@vinejs/vine": "^1.7.1",
     "adonisjs-scheduler": "^1.0.0",
     "edge.js": "^6.0.1",
+    "ethers": "^6.11.1",
     "got": "^14.2.0",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
