--- a/package.json
+++ b/package.json
@@ -74,10 +74,12 @@
     "ethers": "^6.11.1",
     "got": "^14.2.0",
     "luxon": "^3.4.4",
+    "permissionless": "^0.1.4",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "satori": "^0.10.13",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "viem": "^2.7.15"
   },
   "eslintConfig": {
     "extends": "@adonisjs/eslint-config/app"
